<resources>

    <string name="app_name">366外勤</string>
    <string name="loading">加载中，请稍后...</string>
    <string name="login_btn_submit">登陆</string>
    <string name="login_username_input_label">用户名</string>
    <string name="login_password_input_label">密码</string>
    <string name="login_btn_demo">演示</string>
    <string name="login_find_psw">找回密码</string>
    <string name="login_register">没有企业账号？一键注册</string>
    <string name="login_psw_tips">请输入密码</string>
    <string name="login_name_tips">请输入账号</string>
    <string name="title">标题</string>
    
    <string name="mainpage_news">消息</string>
    <string name="mainpage_app">应用</string>
    <string name="mainpage_work">工作</string>
    <string name="mainpage_me">我</string>
    
    
    <string name="dialog_back">返回</string>
    <string name="dialog_alert_title">警告框</string>
    <string name="dialog_alert_ok">知道了</string>
    <string name="dialog_alert_save">保存</string>
    <string name="dialog_alert_cancel">取消</string>
    <string name="dialog_alert_loading">正在加载...</string>
    
    <string name="main_start_up_caution">应用启动中</string>
    <string name="progress_loading">正在加载  #8230;</string>
</resources>
