<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shell_welcome_bg"
    android:gravity="center_vertical|center_horizontal"  
    android:orientation="vertical"
   
    >
    <ImageView 
        android:id="@+id/shell_header_logo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/shell_header_logo"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        >
    </ImageView>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shell_login_table_top"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="27dp"
        >
        <TextView 
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/login_username_input_label"
            android:layout_marginLeft="13dp"
            />
        <EditText
            android:id="@+id/login_username"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:singleLine="true"
            android:background="@null"
            android:textColor="@color/login_text"
            android:hint="@string/login_name_tips"
            />
    </LinearLayout>
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/shell_login_table_bottom"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        >
        <TextView
            android:layout_width="66dp" 
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_weight="0"
            android:text="@string/login_password_input_label"
            android:textColor="@color/login_text"
            />
        <EditText 
            android:id="@+id/login_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/login_text"
            android:background="@null"
            android:hint="@string/login_psw_tips"
            android:password="true"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/login_find_psw"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/login_find_psw"
        android:layout_marginTop="5dp"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        ></TextView>
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="7dp"
        >
        <Button 
            android:id="@+id/login_btn_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shell_login_btn_selector"
            android:text="@string/login_btn_demo"
            android:textColor="#fff"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="7dp"
            />
        <Button 
            android:id="@+id/login_btn_submit"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:background="@drawable/shell_login_btn_selector"
            android:text="@string/login_btn_submit"
            android:textColor="#fff"
            android:textSize="16sp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/login_register"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:layout_marginTop="7dp"
        android:text="@string/login_register"
        />
</LinearLayout>

</RelativeLayout>
